--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.google.firebase:firebase-auth:20.0.3' // Cambiar a una versión compatible con minSdkVersion 21
     implementation 'com.google.android.gms:play-services-auth:19.2.0' // Versión compatible con minSdkVersion 21
+    implementation 'com.google.firebase:firebase-database' // Agregar dependencia para Realtime Database
 
     // dependencias para manejo de imagenes descargadas
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
 }
