Implemento las vistas separadas de publicaciones de empleo y mostrar los perfiles de usuario en un formato de tarjeta de presentacion ataravez de los botones flotantes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,12 @@ dependencies {
     // dependencias para manejo de imagenes descargadas
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //dependencia para tarjeta de presentacion de ver User
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //componenetes de diseño de google
+    implementation 'com.google.android.material:material:1.8.0'
+
+
 }
