--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.omar.sani.empleatec"
-        minSdk 23  // Mantener minSdkVersion en 21
+        minSdk 23 // Mantener minSdkVersion en 21, si es necesario
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    // Dependencias de soporte
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -40,35 +41,35 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // Dependencias para Volley y Retrofit
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // Dependencias para LifeCycle y Navigation
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
     implementation 'androidx.annotation:annotation:1.2.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     // Firebase dependencies
-    implementation platform('com.google.firebase:firebase-bom:33.1.1')
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
-    implementation 'com.google.firebase:firebase-auth:20.0.3' // Cambiar a una versión compatible con minSdkVersion 21
-    implementation 'com.google.android.gms:play-services-auth:19.2.0' // Versión compatible con minSdkVersion 21
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'com.google.firebase:firebase-database' // Agregar dependencia para Realtime Database
 
-    // dependencias para manejo de imagenes descargadas
+    // Dependencias para Google Play Services
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+    // Dependencias para manejo de imágenes
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    //dependencia para tarjeta de presentacion de ver User
+    // Dependencia para tarjeta de presentación de usuario
     implementation 'androidx.cardview:cardview:1.0.0'
-
-    //componenetes de diseño de google
-    implementation 'com.google.android.material:material:1.8.0'
-
-
 }
